--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Gestion Pèlerins Omra",
   "short_name": "Omra Guide",
   "description": "Application de gestion des pèlerins pour Omra",
-  "start_url": "/",
+  "start_url": "/omra-guide/",
+  "scope": "/omra-guide/",
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#16a34a",
